syntax = "proto3";

package ocf.cloud.cqrs.event;

import "github.com/gogo/protobuf/gogoproto/gogo.proto";

option go_package = "github.com/go-ocf/cqrs/protobuf/event;event";

message Path {
    repeated string path = 1;
    string aggregate_id = 2;
}